--- a/style.css
+++ b/style.css
@@ -161,6 +161,10 @@ body{
 #navigation>[class*="navigator_wrapper__"]:before{
 	display:none !important;
 }
+#navigation:not([class^="navigator_is_expanded__"]){
+	text-align: center !important;
+}
+#navigation:not([class^="navigator_is_expanded__"]) .tzzk__navItem{height:40px;}
 #navigation:not([class^="navigator_is_expanded__"]) .tzzk__counter{
 	display:none;
 }
@@ -168,6 +172,9 @@ body{
 	display:none !important;
 }
 
+[class*="navigator_profile__"]{
+	margin-top:0 !important;
+}
 [class*="navigator_profile__"][class*="navigator_is_live__"]{
 	border: none !important;
 	background:none !important;
@@ -276,3 +283,70 @@ body{
 	color:#dedee3 !important;
 	align-self: center;
 }
+
+
+
+
+
+
+/* tzzkChat__root */
+.tzzkChat__html,
+.tzzkChat__html>body{ margin:0; padding:0; width:100%;height:100%;}
+
+#tzzkChat__root{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: var(--color-dark-is-not-black1);
+}
+.tzzkChat__list{
+	display:flex;
+	flex-direction:column;
+	overflow-y:scroll;
+	overflow-x:hidden;
+	width:100%;
+	height:100%;
+	padding:15px;
+	box-sizing:border-box;
+}
+.tzzkChat__item{
+	margin-bottom:5px;
+	color:white;
+	line-height: 20px;
+}
+.tzzkChat__item>*{vertical-align: middle;}
+.tzzkChat__item>.tzzkChat__badge{
+	width:18px;
+	height:18px;
+	margin-right:4px;
+}
+.tzzkChat__item>.tzzkChat__nick{
+	font-weight:bold;
+	margin-right:5px;
+	font-size:14px;
+}
+.tzzkChat__item>.tzzkChat__nick:after{content:':' !important; display:span !important; font-size:13px !important; color:#efeff1 !important; margin-left:1px; font-weight:normal !important;}
+.tzzkChat__item>.tzzkChat__msg{
+	color: #dfe2ea;
+	font-size:14px;
+}
+
+.tzzk__chatList_btnOpenPopupChat{
+	display:flex;
+	align-items: center;
+	color: #dfe2ea;
+	display: -ms-flexbox;
+	display: flex;
+	font-size: 15px;
+	font-weight: 500;
+	height: 37px;
+	padding: 0 16px 0 4px;
+	position: relative;
+	white-space: nowrap;
+	width: 100%;
+	border-radius: 4px;
+}
+.tzzk__chatList_btnOpenPopupChat:hover{
+	background-color: hsla(0,0%,100%,.1);
+}
+.tzzk__chatList_btnOpenPopupChat>svg{fill:#9da5b6;width:25px; margin-right:6px; }
